--- a/style.css
+++ b/style.css
@@ -1,246 +1,611 @@
-
-h1,h2,h3,h4.ul.li{
-  margin: 0;
-  padding: 0;
-}
 body{
-  color: #666;
-  list-style: none;
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-  line-height: 2;
+  background-color: #d2d2d2;
 }
-/* ヘッダー */
 .container{
-  max-width: 1200px;
-  margin: 0;
-}
-.contents{
-  display: flex;
-  justify-content: space-between;
-  margin: 0 center;
-  padding: 10px 50px 30px;
-  margin-bottom: 50px;
-}
-img{
-  max-width: 100%;
-}
-.logo{
-  width: 300px;
-  padding: 30px; 
-}
-/* ナビタグ */
-ul{
-  list-style: none;
-}
-nav ul{
-  text-align: center;
-  margin: 0;
- 
-}
-nav ul li{
-  display: inline-block;
-  text-align: center;
-  border-top: 1px solid #ccc;
-  border-right: solid 1px #ccc;
-  width: 15%;
-  padding: 10px 0;
-  font-weight: bold;
- 
+  width: auto;
+  background-color: white;
+  margin: 0 auto;
+  color: #666;
+
   
 }
-nav li a{.
-  text-decoration: none;
-  color: #666;
+
+
+/* header-title */
+.h-title{
+  border-top: 5px #103ce2 solid;
+  height: 100px;
+  position: relative;
 }
-nav li a:hover{
-  background-color:#e6ebfa;
-  width: 200px;
-  padding: 10px 0;  
+
+.h-title .h-logo{
+  width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 4%;
+  transform: translateY(-50%);
 }
-.navi-en{
+
+
+/* header-nav */
+.h-menu{
+  letter-spacing: -.4em;
+ 
+}
+
+
+.h-list{
+  display: inline-block;
+  width: calc(100%/6);
+  position: relative;
+  letter-spacing: normal;
+  height: 64px;
+  border-right: #d2d2d2 1px solid;
+  border-top: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d2d2d2;
+  vertical-align: bottom;
+  
+}
+
+.h-l-box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 90%;
+  text-align: center;
+}
+
+.h-l-top{
+  font-size: 15px;
   color: #666;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+ .h-l-bottom {
   font-size: 10px;
-  letter-spacing: 3px;
-  font-weight: normal;
+  color: #666;
+  text-align: center;
 }
-.main-image img{
-  margin-bottom: 20px;
+
+/* ナビhover */
+
+.h-list:hover .h-l-top{
+  color: #103ce2;
 }
+
+.h-list:hover{
+  background-color: aliceblue;
+  transition: 0.3s;
+}
+
+.h-list:hover .h-l-box:before{
+  content: "";
+  width: 3px;
+  background-color: blue;
+  height: 100%;
+  position: absolute;
+  left: 4px;
+}
+
+
+
+.active{
+  background-color: aliceblue;
+}
+
+.active .h-l-box:before{
+  content: "";
+  width: 3px;
+  background-color: blue;
+  height: 100%;
+  position: absolute;
+  left: 4px;
+}
+
+/* イメージ画像 */
+.h-image{
+  max-width: 100%;
+  height: auto;
+}
+
+
+
+
 /* メイン */
-section{
-  margin-bottom: 50px;
+.contents{
+  padding: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  
+ 
 }
 .main{
-  width:70%
+  width: 70%;
+  
 }
+
+
+/* セクション① */
+
+
+/* h2タグ */
+.m-h2{
+  background-color:#103ce2;
+  color: white;
+  padding: 12px 22px;
+  border-radius: 3px;
+  font-weight: normal;
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
+.m-info{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 60px;
+  font-size: 15px;
+  line-height: 2;
+  padding: 0 20px;
+}
+
+.m-info-date{
+  padding-right: 5%;
+  color: #103ce2;
+  width: 15%;
+  border-bottom: #ccc 1px solid;
+}
+
+.m-info-content{
+  width: 85%;
+  border-bottom: 1px solid #ccc;
+}
+
+.m-info-new{
+  background-color: red;
+  color: white;
+  font-size: 11px;
+  padding: 2px 4px;
+  border-radius: 2px;
+}
+
+.m-log{
+  margin-left: auto;
+  margin-top: 27px;
+}
+
+.m-log-a{
+  color: #666;
+}
+
+/* セクション② */
+
+/* h3タグ */
+.m-h3{
+  font-weight: normal;
+  color: #666;
+  background-color: #f7f7f7;
+  border: #ccc 1px solid;
+  padding: 10px 22px;
+  font-size: 18px;
+  border-radius: 4px;
+}
+
+.m-p{
+  line-height: 2.5;
+  font-size: 15px;
+  margin: 12px 16px;
+}
+
+.m-p-a{
+  color: #666;
+}
+
+.m-p-point{
+  color: red;
+  font-weight: bold;
+}
+
+.m-h3-red{
+  color: red;
+}
+
+/* サイド */
 .aside{
+  margin-left: 20%;
+}
+
+.side{
   width: 30%;
 }
 
-h2{
-  background-color: #103ce2;
+
+.s-fram{
   padding: 10px;
-  color: white;
-  border-radius: 3px;
-  font-weight: normal;
-  font-size: 18px;
-}
-
-/* 更新情報お知らせ内容 */
-
-.date{
-  margin-right: 30px;
-  color: #103ce2;
-}
-section ul li{
-  border-bottom: #ccc solid 0.5px;
-  margin-right: 30px;
-  line-height: 2;
-}
-.new{
-  color: white;
-  background-color: #fe0101;
-  font-size: 12px;
-  padding: 2px 3px;
-  border-radius: 3px;
-}
-
-/* 過去ログ */
-.log{
-  color: #666;
-  display: block;
-  text-align: right;
-  margin: 10px 30px 70px 0;
-}
-
-/* セクション２テンプレートご利用前 */
-h3{
-  padding: 10px 0 10px 20px;
-  font-weight: normal;
-  margin-top: 15px;
-  background-color: #F4F4F4;
-  border-radius: 3px;
-  font-size: 18px;
-  border: #ccc solid 1px;
-}
-.h3-red{
-  color: #fe0101;
-}
-section a{
-  color: #666;
-}
-.color-red{
-  color: #fe0101;
-  font-weight: bold;
-}
-.color-red-2{
-  color: #fe0101;
-}
-
-
-/* サイドバー */
-aside{
-  margin-left: 40px;
-}
-h4{
-  padding: 30px 10px;
-  border-top:#103ce2 solid 5px;
+  border: 1px #ccc solid;
+  background-color: #f7f7f7;
+  margin-bottom: 24px;
   width: auto;
-  border-bottom: #ccc 1px solid;
-  background-color: #eee;
-  margin-top: 5px;
-}
-.menu-section{
-  border: solid 1px #ccc;
-  width: 250px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  padding: 10px;
-}
-.menu-section-ul ul{
-  margin-left: 0;
+  font-size: 15px;
 }
 
-.menu-section-ul a{
+.s-nofram{
+  background-color: #f7f7f7;
+  margin-bottom: 24px;
+  width: auto;
+  font-size: 15px;
+}
+
+.s-h4{
+  padding: 28px 10px;
+  border-top: 5px solid blue;
+  background-color: #eee;
+  border-bottom: 1px solid #ccc;
+}
+
+
+.s-menu{
+  list-style: none;
+}
+
+
+.s-list{
+  padding: 12px 10px;
+  border-bottom: 1px solid #ccc;
+  overflow: hidden;
+}
+
+.s-list:hover{
+  background-color: white;
+}
+
+.s-list:hover a{
+  background-color: #fff;
+  color: #103ce2;
+}
+
+.s-list a{
   text-decoration: none;
-  display: inline-block;
-  height: 50px;
-  width: 100px;
-}
-.menu-section-ul a:hover{
-  color: #103ce2;
-  background-color: #eee;
-}
-.menu-section-ul li{
-  width: 250px;
   color: #666;
-  border-color: #ccc;
-  line-height: 1;
-  font-size: 12px;
-  display: inline-block;
 }
-.menu-section-none h4{
-  width: 250px;
 
+.s-list img{
+  width: 20%;
+  margin-right: 5px;
+  float: left;
 }
-.menu-section-none{
-  width: 250px;
-  margin-bottom: 20px;
-}
-.menu-section-ul-none li{
-  width: 250px;
-  color: #666;
-  border-color: #ccc;
-  line-height: 1;
-  font-size: 12px;
-  display: inline-block;
-  margin: 10px;
 
-}
-ul.menu-section-ul{
-  padding-left: 10px;
-}
-.infomation-color{
+.s-list-title{
+  font-size: 11px;
   color: #103ce2;
 }
-.menu-section-ul img{
-  width: 40px;
-  height: 25px;
-  margin-right: 5px;
-  margin-top: 5px;
+
+.s-list-description{
+  font-size: 11px;
 }
-.menu-section-ul-none img{
-  width: 40px;
-  height: 25px;
-  margin-right: 5px;
-  margin-top: 5px;
-}
-.acess p{
-  font-size: 12px;
+
+.s-company-name{
+  font-weight: bold;
+  font-size: 15px;
   text-align: center;
-  line-height: 0.8;
-  letter-spacing: 0.05em;
+  padding: 8px 0;
+}
 
+.s-company-infomation{
+  font-size: 11px;
+  text-align: center;
+  line-height: 1.5;
 }
 
 /* フッター */
+
 .footer{
-  height: 70px;
-  color:white;
-  background-color: #103ce2;
   text-align: center;
+  background-color: #103ce2;
+  color: white;
   font-size: 13px;
-  padding-top: 3px;
-  width: 100%;
+  line-height: 2;
+  padding: 16px 0;
+  margin-top: 60px;
 }
+
+.footer-under{
+  font-size: 12px;
+}
+
 .footer a{
+  text-decoration: none;
+  color: white;
+}
+
+.footer a:hover{
+  color: #103ce2;
+}
+
+
+/* recrit.htmlテーブル */
+
+.m-table{
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+.m-title-1{
+  padding: 16px;
+  border: #ccc 1px solid;
+  text-align: left;
+  font-weight: normal;
+}
+.m-title-2{
+  padding: 16px;
+  border: #ccc 1px solid;
+}
+
+
+
+/* お問い合わせフォーム */
+.m-p-red{
+  color: red;
+}
+
+input[type="text"],input[type="email"]{
+  border: #ccc 1px solid;
+  width: 300px;
+  border-radius: 2px;
+}
+
+textarea{
+  resize: both;
+}
+
+#comment{
+  border: #ccc 1px solid;
+  width: 500px;
+  border-radius: 2px;
+  height: 180px;
+}
+
+input[type="submit"]{
+  border: #ccc 1px solid;
+  background-color: #eee;
+  color: black;
+  border-radius: 2px;
+  margin: 20px auto;
+  padding: 5px 8px;
+  font-size: 15px;
+  text-align: center;
+}
+
+.m-btn{
+  text-align: center;
+}
+
+input[type="submit"]:hover{
+  background-color: white;
+}
+
+
+/* リンクカード */
+.m-linkcard{
+  display: flex;
+  background: linear-gradient(#fff,#ddd);
+  border: #ccc 1px solid;
+  border-radius: 3px;
+  box-shadow:  0 10px 20px #ccc;
+  line-height: 2;
+  position: relative;
+
+}
+
+.m-linkcard-img{
+  width: 30%;
+}
+
+.m-linkcard-img img{
+  width: 100%;
+  padding: 20px;
+}
+
+.m-linkcard-text{
+  width: 70%;
+}
+
+.m-link-title{
+  color: #103ce2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.m-link-p{
+  padding-top: 20px;
+  font-size: 15px;
+  color: #666;
+}
+
+.m-link-a{
+  text-decoration: none;
+}
+
+.m-linkcard:hover{
+  background-color: white;
+  color: #103ce2;
+  box-shadow: 0 10px 20px #ccc;
+  transform: translateY(-5px);
+  transition: .3s;
+}
+
+.m-linkcard::before{
+  content: "→";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  color: white;
+  background-color: #666;
+  border-radius: 2px;
+  
+}
+
+.m-linkcard:before :hover{
+  background-color: #ccc;
+  
+}
+  
+
+/* スマホ用ハンバーガーメニュー */
+#nav-open span,#nav-open span:before,#nav-open span:after{
+  position: absolute;
+  height: 3px;
+  width: 30px;
+  background-color: #666;
+  cursor: pointer;
+  content: "";
+}
+
+#nav-open span{
+  top: 38px;
+  right: 30px;
+
+}
+
+#nav-open span:before{
+  bottom: -12px;
+  
+}
+
+#nav-open span:after{
+  bottom: -24px;
+}
+
+#nav-contents{
+  display: none;
+}
+
+.nav-invisible{
+  display: none;
+}
+
+#nav-contents{
+  position: absolute;
+  top: 100px;
+  z-index: 100;
+  width: 100%;
+  height: auto;
+  background: black;
+  transition: .3s;
+  opacity: 0;
+}
+
+#nav-input:checked~#nav-contents{
+  opacity: .8;
+}
+
+.sp-menu-list{
+  padding: 16px;
+  text-align: left;
+  line-height: 2;
+  border-bottom: 1px white solid;
+}
+
+.sp-menu-a{
   color: white;
   text-decoration: none;
 }
-.footer a:hover{
-  color: #103ce2;
+
+.sp-menu-top{
+  font-size: 18px;
+}
+
+.sp-menu-bottom{
+  font-size: 11px;
+}
+
+
+
+
+
+
+
+/* レスポンシブ */
+@media screen and (max-width:640px){
+  body{
+    font-size: 12px;
+    line-height: 1.5;
+  }
+
+  .contents{
+    flex-direction: column;
+    width: 98%;
+    padding: 2%;
+  }
+
+  .main{
+    width:auto;
+  }
+
+  .side{
+    width: auto;
+  }
+
+  .aside{
+    margin-left: 0;
+  }
+
+  /* 上からいきます */
+  .h-title .h-logo{
+    width: 60%;
+  }
+
+  .m-h2, m-h3{
+    font-size: 16px;
+    padding: 7px 6px 7px 8px;
+  }
+
+  .m-info{
+    padding: 0 2px;
+  }
+
+  .m-info-date{
+    font-size: 5px;
+    padding-right: 3%;
+  }
+
+  .m-info-content{
+    font-size: 3px;
+    padding-left: 8%;
+    line-height: 2;
+  }
+
+  .m-info-new{
+    font-size: 8px;
+    padding: 1px 2px;
+  }
+
+  .m-log-a{
+    font-size: 12px;
+  }
+  
+  .h-nav{
+    display: none;
+  }
 
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
